2012-11-07  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (start-gnuplot): Changed :ouput from t to
	:stream for SBCL native command.
	(start-gnuplot): Fixed a closing parethesis error on
	clisp & cygwin & native-external-program feature selector

2012-11-06  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (start-gnuplot): Added feature
	`native-external-program' to enable testing of external program
	invocation

2012-10-27  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp: Renamed variables *input* and *output*
	into more descriptive *gnuplot-input* and *gnuplot-output*
	(start-gnuplot): I now use external-program:run to start gnuplot
	-- I had to modify that routine because it was signaling an error,
	and I notified the maintainer.  I kept the old code for clisp for
	just in case.
	Changed all defvar to defparameter for easier maintenance.

2012-06-21  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (*executable*, *terminal*): The tests
	were not well defined on clisp+cygwin.  I had to redefine unix to
	exclude clisp & wgnuplot.  This needs more attention.

2012-05-31  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp: Porting code to desktop.  Because of
	outdated github the code may be slightly unstable.  Needs to be
	retested on sbcl and laptop.
	(start-gnuplot): While porting to new desktop (where it now
	works), I might have mungled the interface.  This functions needs
	to be retested on SBCL and on my laptop.
	(init-gnuplot): Fixed bug - I was using symbolicate, which I don't
	think was necessary.  Now I downcase the terminal name, since that
	seems to be the convention on gnuplot.
	(*executable*): Modified sbcl search path to test both
	/usr/local/bin and /usr/bin
	(*terminal*): Added case for unix feature setting to X11.
	(start-gnuplot): I restored the sbcl specific code since
	exteranl-program:run did not work